# manor

./: Cargo.toml  README.md  publish.sh
.devcontainer/: devcontainer.json  docker-compose.yml
manor/: Cargo.toml
manor/src/: lib.rs
manor_common/: Cargo.toml
manor_common/src/: client.rs  collection.rs  error.rs  gridfs.rs  lib.rs  model.rs  types.rs
manor_macros/: Cargo.toml
manor_macros/src/: actions.rs  lib.rs  model.rs  schema.rs  util.rs
manor_testing/: Cargo.toml
manor_testing/src/: main.rs
