[package]
name = "manor"
version = "0.2.4"
edition = "2024"
description = "An ORM for MongoDB"
license = "MIT"
homepage = "https://github.com/dax-dot-gay/manor"
repository = "https://github.com/dax-dot-gay/manor"
readme = "../README.md"

[dependencies]
manor_macros = { path = "../manor_macros", version = "0.2.4"}
manor_common = { path = "../manor_common", version = "0.2.4"}
