[package]
name = "manor_common"
version = "0.1.1"
edition = "2024"
description = "An ORM for MongoDB"
license = "MIT"
homepage = "https://github.com/dax-dot-gay/manor"
repository = "https://github.com/dax-dot-gay/manor"

[dependencies]
mongodb = { version = "3.2.2", features = ["sync"] }
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "serde"] }
bson = { version = "2.13.0", features = ["uuid-1", "chrono-0_4"] }
serde = { version = "1.0.219", features = ["derive"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
pin-project = "1.1.10"
thiserror = "2.0.12"
derive_builder = "0.20.2"
async-trait = "0.1.87"
chrono = { version = "0.4.40", features = ["serde"] }
