[lib]
proc-macro = true

[package]
name = "manor_macros"
version = "0.1.2"
edition = "2024"
description = "An ORM for MongoDB"
license = "MIT"
homepage = "https://github.com/dax-dot-gay/manor"
repository = "https://github.com/dax-dot-gay/manor"

[dependencies]
convert_case = "0.8.0"
darling = "0.20.10"
quote = "1.0.39"
syn = "2.0.100"
